--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.8"
 
 services:
   php:
@@ -11,27 +11,26 @@ services:
     volumes:
       - ./:/var/www
     depends_on:
-      - caddy
-      - mysql
+      - nginx
+      - database
       - redis
     networks:
       - main
 
-  caddy:
-    container_name: caddy
-    image: caddy:alpine
+  nginx:
+    container_name: nginx
+    image: nginx:latest
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - ${NGINX_HTTP}:80
+      - ${NGINX_HTTPS}:443
     volumes:
       - ./:/var/www
-      - ./docker/caddy/Caddyfile:/etc/caddy/Caddyfile
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - main
 
-  mysql:
-    container_name: mysql
+  database:
     image: mysql:latest
     restart: unless-stopped
     environment:
@@ -47,7 +46,6 @@ services:
       - main
 
   redis:
-    container_name: redis
     image: redis:latest
     networks:
       - main
